--- a/giphy.html
+++ b/giphy.html
@@ -1,48 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head
   <meta charset="utf-8">
-  <title>Giphy App</title>
-
+  <title>Giphy App</title
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/skeleton.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 <body>
-
     <div class="jumbotron">
-      <h1>GIFFY TIME! WOOHOO!!!!!!!!!!</h1>
-
-      <div id="buttnSpot">Output buttons here</div> <!-- Output buttons here -->
- 
+      <h1>GIFFY TIME! WOOHOO!!!</h1>
+      <div id="bFrame">Output buttons here</div> <!-- Output buttons here -->
     </div>
-
   <div class="container">
     <div class="row">
-        <div class="eight columns" style="margin-top: 10%">
-          
-          <div id="gifSpot"><p>Output GIF's here</p>
+        <div class="eight columns" style="margin-top: 5%">
+          <div id="gFrame"><p>Output GIF's here</p>
           </div> <!-- Output  the gifs in this div -->
-
         </div>
-
-        <div class="four columns" style="margin-top: 10%">
-        This is some other shit over here just testing...
-        
+        <div class="four columns" style="margin-top: 5%">
           <div>
-            Put input form here 
+               <label for="cateGory">Category : <br></label>
+              <form>
+              <input type="text" name="cateGory"><br>
+              </form>
           </div> <!-- Input here -->
-
-
-
         </div>  <!-- Enter  -->
-
-    </div> <!-- Row -->
-
-  </div> <!-- Container -->
-
+        </div> <!-- Row -->
+        </div> <!-- Container -->
 </body>
 </html>
