--- a/giphy.html
+++ b/giphy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head
   <meta charset="utf-8">
-  <title>Giphy App</title
+  <title>Giphy App</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/normalize.css">
@@ -23,12 +23,15 @@
         <div class="four columns" style="margin-top: 5%">
           <div>
                <label for="cateGory">Category : <br></label>
-              <form>
-              <input type="text" name="cateGory"><br>
+                <form>
+                <input type="text" name="cateGory"><br>
               </form>
           </div> <!-- Input here -->
         </div>  <!-- Enter  -->
         </div> <!-- Row -->
         </div> <!-- Container -->
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
