--- a/giphy.html
+++ b/giphy.html
@@ -11,26 +11,25 @@
 </head>
 <body>
     <div class="jumbotron">
-      <h1>GIFFY TIME! WOOHOO!!!</h1>
-      <div id="bFrame">Output buttons here</div> <!-- Output buttons here -->
+      <h1>Giffy</h1>
+      <div id="bFrame"></div> <!-- Output buttons here -->
     </div>
   <div class="container">
     <div class="row">
         <div class="eight columns" style="margin-top: 5%">
-          <div id="gFrame"><p>Output GIF's here</p>
-          </div> <!-- Output  the gifs in this div -->
+          <div id="gFrame">   </div> <!-- Output  the gifs in this div -->
         </div>
         <div class="four columns" style="margin-top: 5%">
           <div>
+              <form id="catForm">
                <label for="cateGory">Category : <br></label>
-                <form>
-                <input type="text" name="cateGory"><br>
+                <input type="text" id="cateGory"><br>
+                <input id="addCateGory" type="submit" value="Add">
               </form>
           </div> <!-- Input here -->
         </div>  <!-- Enter  -->
         </div> <!-- Row -->
         </div> <!-- Container -->
-
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
